service-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-one
  labels:
    app: service-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-one
  template:
    metadata:
      labels:
        app: service-one
    spec:
      containers:
      - name: service-one
        image: service_one
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
