service-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-two
  labels:
    app: service-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-two
  template:
    metadata:
      labels:
        app: service-two
    spec:
      containers:
      - name: service-two
        image: service_two
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4002
